Updated site generation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,7 +150,7 @@ import '../styles/global.css';
 
       customElements.define("lazy-load", LazyLoad);
     </script>
-        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "", image: '', type: "website", themeColor: "#ffffff"}} />
+        <Seo seo={{ title: "EcoBuilder", description: "Page description", keywords: "", canonical: "https://textspace-1738897077779.netlify.app/", image: 'https://textspace-1738897077779.netlify.app', type: "website", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href=/favicons/1738827346299_favicon.ico /> 
 		<!-- <link
